# csnake

./: CMakeLists.txt  README.md  a.out  main.c
contantes/: globales.h
manzanas/: generar_manzanas.c  generar_manzanas.h
snake/: serpiente.c  serpiente.h
tablero/: tablero.c  tablero.h
teclado/: teclado.c  teclado.h
